--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
     <div class="container">
 
         <div class="alert alert-success mb-3" role="alert">
-            <p>ここに難易度表の説明文。次期難易度表フォーマット対応。</p>
-            <p>難易度表の読み込みと表示に数秒かかります。</p>
+            <p>Satellite/Stellaの譜面数増加により練習譜面の択が広がりすぎているので、特に練習に向いている譜面をまとめてみました。</p>
+            <p>自身の適正レベルのベンチマーク等にお使いください。</p>
+            <p>譜面は主にメジャーな難易度表（発狂難易度表,Overjoy,Satellite,Stella）から厳選しています。</p>
             <hr>
-            <p class="mb-0">説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文</p>
+            <p class="mb-0">川1~24までは★1~24相当</p>
+            <p class="mb-0">難易度は1曲通してゲージをそれなりに維持する難易度（≒ハード難易度）を考慮して決定しています。</p>
         </div>
 
 
